feat: use ScriptService shared methods